--- a/.project
+++ b/.project
@@ -3,6 +3,7 @@
 	<name>roboboard-freertos73-lpcusb-led</name>
 	<comment></comment>
 	<projects>
+		<project>CMSISv2p00_LPC17xx</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
